--- a/src/main/webapp/WEB-INF/vm/add_phase.vm
+++ b/src/main/webapp/WEB-INF/vm/add_phase.vm
@@ -4,8 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>添加批次</title>
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="/static/css/style.css" />
-	<link rel="stylesheet" href="/static/css/module.css" />
+	<link rel="stylesheet" href="/static/css/style.min.css" />
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
 	<script type="text/javascript" src="/static/js/bootstrap.js"></script>
 	<script type="text/javascript" src="/static/js/recruit/phase_manage.js"></script>
