--- a/src/main/webapp/WEB-INF/vm/phase_manage.vm
+++ b/src/main/webapp/WEB-INF/vm/phase_manage.vm
@@ -4,9 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>批次管理</title>
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="/static/css/style.css" />
-	<link rel="stylesheet" href="/static/css/module.css" />
-	<link rel="stylesheet" href="/static/css/page.css" />
+	<link rel="stylesheet" href="/static/css/style.min.css" />
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
 	<script type="text/javascript" src="/static/js/jquery.page.js"></script>
 	<script type="text/javascript" src="/static/js/bootstrap.js"></script>
