--- a/src/main/webapp/WEB-INF/vm/view_index_backup.vm
+++ b/src/main/webapp/WEB-INF/vm/view_index_backup.vm
@@ -4,8 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>校招系统</title>
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="/static/css/style.css" />
-	<link rel="stylesheet" href="/static/css/module.css" />
+	<link rel="stylesheet" href="/static/css/style.min.css" />
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
 </head>
 <body>
