--- a/src/main/webapp/WEB-INF/vm/add_student.vm
+++ b/src/main/webapp/WEB-INF/vm/add_student.vm
@@ -55,7 +55,7 @@
 							<div class="control-group">
 								<label class="control-label">姓名</label>
 								<div class="controls">
-								  <input type="text"  name="name" id="name">
+								  <input type="text"  name="name" id="name" placeholder="必填">
 								</div>
 							</div>
 							<div class="control-group">
@@ -86,7 +86,7 @@
 							<div class="control-group">
 								<label class="control-label">手机号</label>
 								<div class="controls">
-								  <input type="text"  name="phone" id="phone">
+								  <input type="text"  name="phone" id="phone" placeholder="必填">
 								</div>
 							</div>
 							<div class="control-group">
