--- a/src/main/webapp/WEB-INF/vm/add_phase.vm
+++ b/src/main/webapp/WEB-INF/vm/add_phase.vm
@@ -60,7 +60,7 @@
     					</div>
 				<div id="allview" class="m-pop alert alert-info" style="display:none">
 					<div class="m-pop-hd">
-						<button type="button" class="close" onclick="doclose()">&times;</button>
+						<button type="button" class="close" onclick="docancle()">&times;</button>
 					</div>
 					<div class="m-pop-bd">
 						<div class="row-fluid">
@@ -78,7 +78,7 @@
 						<div class="control-group">
 							<div class="controls text-center">
 							  <button type="button" class="btn" onclick="doaddview()">保存</button>
-							  <button type="button" class="btn btn-primary" onclick="doclose()">取消</button>
+							  <button type="button" class="btn btn-primary" onclick="docancle()">取消</button>
 							</div>
 						</div>
 					</div>
