--- a/src/main/webapp/WEB-INF/vm/view_index.vm
+++ b/src/main/webapp/WEB-INF/vm/view_index.vm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>面试平台-初试</title>
+    <title>面试平台</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
     <script src="/static/js/jquery-2.1.4.min.js"></script>
 	<script src="/static/js/data.js"></script>
@@ -39,9 +39,9 @@
                     	<table class="table table-bordered" style="margin-top:20px">
                         <thead>
                             <tr>
-                                <th style="text-align:center">监控</th>
-                                <th style="text-align:center">一面</th>
-                                <th style="text-align:center">二面</th>
+                                <th style="text-align:center">等待面试人数</th>
+                                <th style="text-align:center">初试</th>
+                                <th style="text-align:center">复试</th>
                             </tr>
                         </thead>
                         <tbody>
