--- a/src/main/webapp/WEB-INF/static/pc/css/style.css
+++ b/src/main/webapp/WEB-INF/static/pc/css/style.css
@@ -46,82 +46,80 @@ html,body{
 .wrap-1000 .title-name{
 
 	position: absolute;
-	top: 146px;
-	left: 274px;
-	font-size: 103px;
+	top: 154px;
+	left: 257px;
+	font-size: 80px;
 	color: #fff;
-	width: 430px;
+	width: 350px;
 	font-style: italic;
-	/*font-weight: bold;*/
+	text-align: center;
 }
 .wrap-1000 .title-root{
 	position: absolute;
-	top: 256px;
+	top: 278px;
 	left: 354px;
-	font-size: 103px;
+	font-size: 80px;
 	color: #fff;
-	width: 490px;
+	width: 400px;
 	font-style: italic;
-	/*font-weight: bold;*/
+	text-align: center;
 }
 .banner{
 	position: absolute;
-	top:565px;
 	left: 0;
 	right: 0;
+	bottom: 0;
 	width: 100%;
-	height: 335px;
+	background: url(../images/shadow.png) repeat-x top left;
 }
 .nav {
-	width: 1400px;
-	height: 335px;
+	width: 1290px;
 	margin: 0 auto;
+	padding: 40px 58px 30px;
+	overflow: hidden;
 }
 .nav .item{
-	width: 210px;
-	height: 335px;
+	width: 160px;
+	height: 122px;
 	float: left;
-	margin-left: 20px;
-	background: url(../images/nav2.png) no-repeat;
-	_background: url(../images/nav2.gif) no-repeat;
+	border-right: 1px solid #2a5276;
+	position: relative;
+	margin-bottom: 60px;
 }
-
+.nav .item-last{
+	border-right:none;
+}
+.nav .item-last-bottom{
+	margin-bottom: 0;
+}
 .nav .item .room{
-	padding-top: 36px;
-	font-size: 60px;
-	padding-left: 38px;
-	line-height: 64px;
+	font-size: 40px;
+	line-height: 35px;
+	margin-top: -10px;
 	text-align: center;
 	color: #4aa6c5;
 }
 .nav .item .state{
 	font-size: 30px;
-	padding-left: 33px;
-	padding-top: 10px;
-	line-height: 48px;
+	line-height: 42px;
 	text-align: center;
 	color: #4aa6c5;
+	padding-bottom: 5px;
 }
 .nav .item .name{
-	padding-top: 33px;
-	padding-left: 32px;
-	padding-right: 13px; 
-	line-height: 54px;
-	font-size: 42px;
+	line-height: 35px;
+	font-size: 24px;
 	color: #4aa6c5;
 	text-align: center;
+	height: 35px;
+	overflow: hidden;
 }
 .nav .item .job{
-	padding-left: 26px;
-	padding-right: 25px;
-	line-height: 50px;
-	font-size: 42px;
+	line-height: 26px;
+	font-size: 24px;
 	text-align: center;
 	color: #4aa6c5;
-}
-.nav .item-wait{
-	background: url(../images/nav.png) no-repeat;
-	_background: url(../images/nav.gif) no-repeat;
+	margin-bottom: -20px;
 }
 .nav .item-wait .room,.nav .item-wait .state{
 	color: #fff;
