--- a/src/main/webapp/WEB-INF/vm/view_index.vm
+++ b/src/main/webapp/WEB-INF/vm/view_index.vm
@@ -4,11 +4,13 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>面试平台</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/static/css/style.min.css" />
+    <link rel="stylesheet" href="/static/css/upload.css" />
     <script src="/static/js/jquery-2.1.4.min.js"></script>
 	<script src="/static/js/data.js"></script>
 	<script src="/static/js/index.js"></script>
 	<script src="/static/js/recruit/student_assess.js"></script>
-    <link rel="stylesheet" href="/static/css/style.min.css" />
+    <script src="/static/js/ajaxfileupload.js"></script>
 </head>
 <body>
     <div class="l-fullsreen">
@@ -105,8 +107,12 @@
                                     <h3>复试面试官：<span class="text" id="second_viewer"></span></h3>
                                 </div>
                                 <!--
-                                <div class="picture">
-                                    <span class="btn">上传图片</span>
+                                <div class="picture" style="text-align:center;width:100px;height:60px;">
+                                	<a href="javascript:;" class="a-upload">
+    									<input type="file" name="file" id="file1">选择图片
+									</a>
+									<input type="button" id="uploadImg" value="上传" />
+									<input type="hidden" id="imgsrc" name="imgsrc" value="" />
                                 </div>
                                 -->
                             </div>
