--- a/src/main/webapp/WEB-INF/vm/inter_login.vm
+++ b/src/main/webapp/WEB-INF/vm/inter_login.vm
@@ -17,6 +17,7 @@
 		<script type="text/javascript" src="/static/js/jquery.js"></script>
 		<script src="/static/js/recruit/inter_recordphasecity.js"></script>
 		<script src="/static/assets/js/login.js"></script>
+		<script src="/static/js/recruit/kaptcha.js" ></script>
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
             <script src="/static/assets/js/html5.js"></script>
@@ -38,6 +39,10 @@
 				</select>
                 <input type="text" name="username" class="username" placeholder="请输入您的用户名！">
                 <input type="password" name="password" class="password" placeholder="请输入您的用户密码！">
+                <input name="j_code" type="text" id="kaptcha" maxlength="4" placeholder="请输入验证码！"/>
+			   <br/> 
+			   <img src="/code/captcha-image" id="kaptchaImage"  style="margin-bottom: -3px"/>       
+			   <a id="changeKaptcha" href="#">看不清?换一张</a>  
                 <br>
                 <div class="msg" id="msg">${message}</div>
                 <button type="submit" onclick="checkUp();" class="submit_button">登录</button>
