--- a/src/main/webapp/WEB-INF/vm/pc/pc_login.vm
+++ b/src/main/webapp/WEB-INF/vm/pc/pc_login.vm
@@ -17,6 +17,7 @@
 		<script type="text/javascript" src="/static/js/jquery.js"></script>
 		<script src="/static/js/recruit/recordphasecity.js"></script>
 		<script src="/static/assets/js/login.js"></script>
+		<script src="/static/js/recruit/kaptcha.js" ></script>
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
             <script src="/static/assets/js/html5.js"></script>
@@ -36,6 +37,10 @@
 				</select>
 				<select name="" id="city" style="width:71px;height:30px;">
 				</select>
+				<input name="j_code" type="text" id="kaptcha" maxlength="4" placeholder="请输入验证码！"/>
+			   <br/> 
+			   <img src="/code/captcha-image" id="kaptchaImage"  style="margin-bottom: -3px"/>       
+			   <a id="changeKaptcha" href="#">看不清?换一张</a>  
                 <button type="submit" id="pclogin" class="submit_button">登录</button>
             </form>
         </div>
